clang/test/BSC/Negative/Ownership/Owned/owned_ast_check/owned_ast_check.cbs
// Test without serialization:
// RUN: %clang_cc1 -ast-dump -verify %s \
// RUN: | FileCheck -strict-whitespace %s

struct A {
    _Owned int a; // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
    int _Owned b; // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
    int _Owned * c; // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
    int* _Owned d;
    int* _Owned* _Owned e;
};
// CHECK:       RecordDecl 0x{{[^ ]*}} {{.*}}struct A definition
// CHECK-NEXT:  FieldDecl 0x{{[^ ]*}} {{.*}}a '_Owned int'
// CHECK-NEXT:  FieldDecl 0x{{[^ ]*}} {{.*}}b '_Owned int'
// CHECK-NEXT:  FieldDecl 0x{{[^ ]*}} {{.*}}c '_Owned int *'
// CHECK-NEXT:  FieldDecl 0x{{[^ ]*}} {{.*}}d 'int *_Owned'
// CHECK-NEXT:  FieldDecl 0x{{[^ ]*}} {{.*}}e 'int *_Owned *_Owned'

void ownedTest0() {
    int _Owned a; // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
    int* _Owned b;
    int* _Owned * _Owned d;
    return;
}
// CHECK:       FunctionDecl 0x{{[^ ]*}} {{.*}}ownedTest0 'void (void)'
// CHECK-NEXT:  CompoundStmt 0x{{[^ ]*}} {{.*}}
// CHECK-NEXT:  DeclStmt 0x{{[^ ]*}} {{.*}}
// CHECK-NEXT:  VarDecl 0x{{[^ ]*}} {{.*}}a '_Owned int'
// CHECK-NEXT:  DeclStmt 0x{{[^ ]*}} {{.*}}
// CHECK-NEXT:  VarDecl 0x{{[^ ]*}} {{.*}}b 'int *_Owned'
// CHECK-NEXT:  DeclStmt 0x{{[^ ]*}} {{.*}}
// CHECK-NEXT:  VarDecl 0x{{[^ ]*}} {{.*}}d 'int *_Owned *_Owned'
// CHECK-NEXT:  ReturnStmt 0x{{[^ ]*}} {{.*}}

int ownedTest1(_Owned int x, _Owned int* y, _Owned int* _Owned c, _Owned int* _Owned * d) { // expected-error {{type of 'int' cannot be qualified by '_Owned'}} expected-error {{type of 'int' cannot be qualified by '_Owned'}} expected-error {{type of 'int' cannot be qualified by '_Owned'}} expected-error {{type of 'int' cannot be qualified by '_Owned'}}
    return 0;
} 
// CHECK:       FunctionDecl 0x{{[^ ]*}} {{.*}}ownedTest1 'int (_Owned int, _Owned int *, _Owned int *_Owned, _Owned int *_Owned *)'
// CHECK-NEXT:  ParmVarDecl 0x{{[^ ]*}} {{.*}}x '_Owned int'
// CHECK-NEXT:  ParmVarDecl 0x{{[^ ]*}} {{.*}}y '_Owned int *'
// CHECK-NEXT:  ParmVarDecl 0x{{[^ ]*}} {{.*}}c '_Owned int *_Owned'
// CHECK-NEXT:  ParmVarDecl 0x{{[^ ]*}} {{.*}}d '_Owned int *_Owned *'
// CHECK-NEXT:  CompoundStmt 0x{{[^ ]*}} {{.*}}
// CHECK-NEXT:  ReturnStmt 0x{{[^ ]*}} {{.*}}
// CHECK-NEXT:  IntegerLiteral 0x{{[^ ]*}} {{.*}}'int' 0

int* _Owned ownedTest2(int* _Owned p) {
    return p;
}
// CHECK:       FunctionDecl 0x{{[^ ]*}} {{.*}}ownedTest2 'int *_Owned (int *_Owned)'
// CHECK-NEXT:  ParmVarDecl 0x{{[^ ]*}} {{.*}}p 'int *_Owned'
// CHECK-NEXT:  CompoundStmt 0x{{[^ ]*}} {{.*}}
// CHECK-NEXT:  ReturnStmt 0x{{[^ ]*}} {{.*}}
// CHECK-NEXT:  ImplicitCastExpr 0x{{[^ ]*}} {{.*}}'int *_Owned'
// CHECK-NEXT:  DeclRefExpr 0x{{[^ ]*}} {{.*}}'int *_Owned'


